--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,3 @@
-.debug .row {
-
-    border: 1px solid black;
-}
-
-.debug div[class*="col-"] {
-
-    border: 1px dashed red;
-}
-
 /* GENERAL STYLE */
 :root {
     --ms-color-acqua: #58B99D;
@@ -15,26 +5,46 @@
     --ms-color-dark: #303D4E;
 }
 
-#ms-copyright, .navbar {
-    background-color: var(--ms-color-dark);
-}
-
-#ms-jumbo .container, #ms-info-text .container {
-    background-color: var(--ms-color-acqua);
-}
-
-#ms-about-us {
+.navbar, footer  {
     background-color: var(--ms-color-navy);
 }
 
-/* NAVBAR STYLE */
-.navbar-nav .nav-link, .navbar-brand {
-    color: white !important;
+
+#ms-jumbo , #ms-info-text {
+    background-color: var(--ms-color-acqua);
+}
+
+#ms-copyright {
+    background-color: var(--ms-color-dark);
+}
+
+.ms-star-line div {
+    display: inline-block
+}
+
+.ms-line {
+    width: 15%;
+    height: 0.3rem;
+    border-radius: 20px;
+}
+
+/* DECORATION ELEMENTS GENERAL STYLE */
+.ms-star i {
+    font-size: 2rem;
+    padding: 1rem;
 }
 
 
-/* MAIN STYLE */
+/* NAVBAR STYLE */
+.navbar-nav .nav-link, .navbar-brand {
+    color: white;
+}
 
+nav li, .navbar-brand strong {
+    padding: 0 4px;
+}
+
+/* MAIN STYLE */
 /* MAIN-SECTION JUMBO */
 .ms-jumbo-img {
     width: 25%;
@@ -42,5 +52,134 @@
     margin: auto;
 }
 
+#ms-jumbo .ms-star-line {
+    color: white;
+}
+
+#ms-jumbo .ms-line {
+    background-color: white;
+}
+
 /* MAIN-SECTION INFO-CARD */
 
+#ms-info-card {
+    padding: 2rem 0;
+}
+
+#ms-info-card .ms-star-line {
+    color: var(--ms-color-navy);
+}
+
+#ms-info-card .ms-line {
+    background-color: var(--ms-color-navy);
+}
+
+.hover-relative{
+    position: relative;
+}
+
+.ms-card img {
+    border-radius: 5%;
+}
+
+.hover-card {
+    background-color: var(--ms-color-acqua);
+    opacity: 0.5;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: none;
+    border-radius: 5%;
+}
+
+.hover-card i {
+    font-size: 70px;
+    opacity: 1;
+    color: var(--ms-color-navy);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+/* MAIN-SECTION INFO-TEXT */
+#ms-info-text .ms-line {
+    background-color: white;
+}
+
+/* MAIN-SECTION INFO-FORM */
+#ms-info-form .ms-star-line {
+    color: var(--ms-color-navy);
+}
+
+#ms-info-form .ms-line {
+    background-color: var(--ms-color-navy);
+}
+
+#ms-info-form button {
+    color: white;
+    background-color: var(--ms-color-acqua);
+}
+
+.ms-input {
+   border-top: none;
+   border-left: none;
+   border-right: none;
+   padding-left: 0;
+   border-radius: 0;
+}
+
+/* FOOTER */
+.footer-start-boot {
+    color: var(--ms-color-acqua);
+    text-decoration: none;
+}
+
+.footer-icon i {
+    height: 36px;
+    width: 36px;
+    line-height: 36px;
+    font-size: 18px;
+    margin: 0 4px;
+    border: 1px solid white;
+    border-radius: 50%;
+}
+
+/* HOVER STYLE */
+
+#ms-info-form button:hover {
+    background-color: #424720;
+}
+
+.navbar-brand:hover {
+    background-color: var(--ms-color-acqua);
+    border-radius: 20px;
+}
+
+nav li:hover {
+    background-color: var(--ms-color-acqua);
+    border-radius: 20px;
+}
+
+footer i:hover {
+    background-color: var(--ms-color-acqua)
+}
+
+.footer-start-boot:hover {
+    text-decoration: underline;
+}
+
+/* MEDIA STYLE */
+
+@media all and (min-width: 992px) {
+    #ms-jumbo span {
+        font-size: 24px;
+    }
+}
+
+
+.ms-card:hover .hover-card {
+    display: block;
+}
